--- a/index.html
+++ b/index.html
@@ -1482,7 +1482,8 @@ async function showCredits(endingText) {
     document.getElementById('credits-text').innerHTML = `
         <div style="font-size:2.5rem; margin-bottom:2rem;">ENIGMA</div>
         <div style="font-size:1.5rem; margin-bottom:1rem;">A Philosophy of Consciousness</div>
-        <div style="font-size:1.2rem; color:#ff00d4;">by solo dev MetroCorex</div>
+        <div style="font-size:1.2rem; color:#ff00d4;">by dev_MetroCorex</div>
+        <div style="font-size:1.2rem; color:#00f0ff; margin-bottom:2rem;">& dev_ChromeNomad</div>
         <div style="font-size:1rem; opacity:0.7; font-style:italic;">${lastLine}</div>
     `;
     
